--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,16 +1,7 @@
-- title: home
+- title: Home
   url: /
   external: false
 
-- title: archive
-  url: /archive/
-  external: false
-
-- title: about
-  url: /about/
-  external: false # set true if you using external link, see below
-
-# Example:
-# - title: github
-#   url: https://github.com/piharpi/jekyll-klise
-#   external: true
+# - title: archive
+#   url: /archive/
+#   external: false
