--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,22 @@
 # Site settings
-title: Klise Theme # site title
-description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+title: Amol Gupta # site title
+description: Ideas, reflections and things that make me wonder
 lang: en-US # default lang
 timezone: Asia/Jakarta # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
+repo: 
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: Jekyll Klisé # author name
-  bio: >- # tell to the world
-    The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
-    meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
+  name: Amol Gupta # author name
+  bio: Ideas, reflections and things that make me wonder.
+      <br/><a href="https://www.linkedin.com/in/amolkgupta/">LinkedIn</a> | <a href="http://github.com/amolgupta">Github</a> | <a href="http://twitter.com/amolgupta">Twitter</a>
   username: username # general username
-  github: github_username # github username
-  twitter: twitter_username # twitter username
+  github: amolgupta # github username
+  twitter: amolgupta # twitter username
   facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
+  email: amolgupta1989@gmail.com # email adress
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
@@ -60,7 +57,7 @@ jekyll_compose:
     description:
 
 # Homepage limit posts
-number_of_posts: 5
+number_of_posts: 50
 
 # Build settings
 # theme: klise
